--- a/Inspectie_App/Inspectie_App.Android/Inspectie_App.Android.csproj
+++ b/Inspectie_App/Inspectie_App.Android/Inspectie_App.Android.csproj
@@ -111,5 +111,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Editicon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Addicon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
